# virginity-ib

./: LICENSE  README.md  pyproject.toml  requirements.txt  survey_answers.csv
results_csvs/: all_answers.csv  subject_level.csv  total_nonvirgins_subject_level.csv  total_virgins_subject_level.csv
src/answers_processing/: combine_all_answers.py  count_subject_level_dp.py  count_subjects_and_levels.py  dp.py  learning_pandas.py
src/bar_charts/: create_bar_charts.py  create_bar_charts_sl.py
src/binomial_distribution/: binomial_distribution.py
src/charts/: create_bar_charts.py  create_pie_charts.py  levels.py  try_pdf.py
src/paths/: paths.py
src/pie_charts/: create_pie_chart_history_sl.py
